# auv_controller

./: CMakeLists.txt  README.md  package.xml  tree.txt
db/: AUV_DB
include/auv_controller/: AUV324ControllerROS.h  AUVBaseController.h  AUVCommon.h  AUVController.h  AUVControllerExp.h  AUVControllerNoFF.h  AUVControllerROS.h  AUVControllerWithFB.h  AUVControllerWithFF.h  AUVControllerXF.h  AUVCtrlMsgsRecorder.h  AUVCtrlMsgsRecorderROS.h  AUVOutlineController.h  AUVOutlineControllerROS.h  AUVPIDController.h  AUVPIDControllerNoFF.h  AUVPIDControllerROS.h  AUVPIDControllerWithFF.h  AUVPIDControllerXF.h  AUVTrajFollowManagerROS.h  ArmsAUVControllerROS.h  BodyParams.h  Common.h  CtrlParams.h  Dynamic.h  ForceParams.h  PIDController.h  PIDCtrlParams.h  SMCtrlParams.h  async_tcp_client.h  async_tcp_server.h  server.h  tcp_client.h  tcp_server.h
launch/: auv324_outline_actuate.launch  auv_ctrlmsgs_recorder_node.launch  auv_outline_actuate.launch  auv_traj_follow_mission_node.launch
node/: ResetCtrlStateClient.cpp
nodes/: AUVCtrlMsgsRecordNode.cpp  AUVTrajFollowMissionNode.cpp
record/: control_record_2021-Mar-24.txt  control_record_2021-Mar-25.txt  control_record_2021-Mar-25_fixed_depth.txt  control_record_2021-Mar-25_fixed_depth_and_yaw.txt
script/: auv324_csv_parser.py  auv324_csv_parser_node  auv324_db_parser.py  auv324_db_parser_node  auv_csv_parser.py  auv_csv_parser_node  auv_csv_parser_node.py  auv_db_parser.py  auv_db_parser_node.py  csv_parser_test.py  db_parser_test.py  model_params_plot.py  model_params_plot_u324.py
src/: AUV324ControllerROS.cpp  AUVBaseController.cpp  AUVController.cpp  AUVControllerExp.cpp  AUVControllerNoFF.cpp  AUVControllerROS.cpp  AUVControllerWithFB.cpp  AUVControllerWithFF.cpp  AUVControllerXF.cpp  AUVCtrlMsgsRecorder.cpp  AUVCtrlMsgsRecorderROS.cpp  AUVOutlineControllerROS.cpp  AUVPIDController.cpp  AUVPIDControllerNoFF.cpp  AUVPIDControllerROS.cpp  AUVPIDControllerWithFF.cpp  AUVPIDControllerXF.cpp  AUVTrajFollowManagerROS.cpp  ArmsAUVControllerROS.cpp  Common.cpp  PIDController.cpp  async_tcp_client.cpp  async_tcp_server.cpp  file_writer.cpp  server.cpp  tcp_client.cpp  tcp_server.cpp
srv/: ResetCtrlState.srv  SetMissionStatus.srv
test/: AUV324ControllerTest.cpp  AUVControllerExpTest.cpp  AUVControllerTest.cpp  AUVDBParser.cpp  AUVPIDControllerTest.cpp  ArmsAUVControllerTest.cpp  async_tcp_client_test.cpp  async_tcp_server_test.cpp  server_test.cpp  tcp_client_test.cpp  tcp_server_test.cpp
